--- a/first-react/src/index.css
+++ b/first-react/src/index.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -64,5 +64,38 @@ button:focus-visible {
   }
   button {
     background-color: #f9f9f9;
+  }
+} */
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  padding: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  background: #27292c;
+  color: white;
+}
+
+h1 {
+  margin-top: 30px;
+}
+
+.header-image {
+  width: 55px;
+}
+
+header {
+  display: flex;
+}
+
+.nav-list {
+  list-style: none;
+  display: flex;
+  justify-content: end;
+  li {
+    margin-left: 20px;
+    font-size: 1.1.rem;
   }
 }
